Change the runtime to share output with stdout for system() calls.